--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "bugs": {
     "url": "https://github.com/MetaMask/test-dapp/issues"
   },
-  "homepage": "https://metamask.github.io/test-dapp",
+  "homepage": "https://walletx-inc.github.io/test-xtension-dapp",
   "dependencies": {},
   "devDependencies": {
     "@lavamoat/allow-scripts": "^2.5.1",
