--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@metamask/test-dapp",
-  "version": "8.1.0",
-  "description": "A simple dapp used in MetaMask e2e tests.",
+  "name": "@walletx/test-dapp",
+  "version": "1.0.0",
+  "description": "A simple dapp used in WalletX e2e tests.",
   "engines": {
     "node": ">= 18.0.0"
   },
   "scripts": {
     "setup": "yarn install && yarn allow-scripts",
-    "deploy": "./deploy.sh",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint:eslint": "eslint . --cache --ext js,ts",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path .gitignore",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
@@ -23,15 +24,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/test-dapp.git"
+    "url": "https://github.com/WalletX-Inc/Test-Xtension-Dapp"
   },
   "files": [
     "dist/"
   ],
-  "author": "MetaMask",
+  "author": "WalletX",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MetaMask/test-dapp/issues"
+    "url": "https://walletx-inc.github.io/test-xtension-dapp/issues"
   },
   "homepage": "https://walletx-inc.github.io/test-xtension-dapp",
   "dependencies": {},
@@ -55,21 +56,13 @@
     "eth-sig-util": "^2.5.3",
     "ethereumjs-util": "^5.1.1",
     "ethers": "^5.0.32",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^6.0.0",
     "prettier": "^2.3.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  },
-  "lavamoat": {
-    "allowScripts": {
-      "@lavamoat/preinstall-always-fail": false,
-      "eth-sig-util>ethereumjs-abi>ethereumjs-util>keccakjs>sha3": false,
-      "ethereumjs-util>keccak": false,
-      "ethereumjs-util>secp256k1": false
-    }
   },
   "packageManager": "yarn@1.22.19"
 }
